--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -3,13 +3,51 @@ body{
 	margin: 0;
 	padding: 0;
 	height: 100%;
+
 }
 
-.background{
-    background-image: url(../images/background/bg001.jpg);
+#background{
+    background-image: url(../images/background/bg000.png);
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     display: table;
-    width: 100%;
     height: 100%;
+    width: 100%;
+    min-height: 640px;
+}
+
+.loginContainer * {
+	color: #fff;
+	font-weight:normal;
+	font-height:1em ;
+	box-sizing:border-box;
+	font-family:'Roboto',sans-serif;
+}
+
+#inputContainer input[type="text"],
+#inputContainer input[type="password"],
+#inputContainer input[type="email"]
+{
+	background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid #fff;
+    border-radius: 0px;
+    line-height: 20px;
+    width: 100%;
+    color: #f7f8f9;
+    font-size: 18px;
+    font-family:'Roboto',sans-serif;
+}
+
+#inputContainer {
+    padding: 35px;
+    width: 400px;
+    float: left;
+    border-right: 0.8px solid #e9e9e9;
+}
+
+#inputContainer h4{
+text-align: center;
 }
