--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -3,6 +3,7 @@ body{
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	width: 100%;
 
 }
 
@@ -46,8 +47,20 @@ body{
     width: 400px;
     float: left;
     border-right: 0.8px solid #e9e9e9;
+    font-family:'Roboto',sans-serif;
 }
 
 #inputContainer h4{
 text-align: center;
+font-family:'Roboto',sans-serif;
+}
+
+.btn-group-lg>.btn, .btn-lg {
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    /* border-radius: .2rem; */
+    border-radius: 40px;
+    width: -webkit-fill-available;
+    width: 100%;
 }
