--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -4,7 +4,6 @@ body{
 	padding: 0;
 	height: 100%;
 	width: 100%;
-
 }
 
 #background {
@@ -60,9 +59,10 @@ font-family:'Roboto',sans-serif;
     padding: .25rem .5rem;
     font-size: .875rem;
     line-height: 1.5;
-    /* border-radius: .2rem; */
+    border-radius: .2rem; 
     border-radius: 40px;
     width: -webkit-fill-available;
     width: 100%;
     border: 1.5px solid #fff;
+    
 }
