--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -4,6 +4,7 @@ body{
 	padding: 0;
 	height: 100%;
 	width: 100%;
+	min-height: 640px;
 }
 
 #background {
@@ -12,10 +13,9 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    display: table;
-    height: 100%;
+    display: inline-table;
+    height: 120%;
     width: 100%;
-    min-height: 640px;
     background-origin: padding-box;
 }
 
@@ -45,7 +45,7 @@ body{
 
 #inputContainer {
     padding: 35px;
-    width: 400px;
+    width: 360px;
     float: left;
     border-right: 0.8px solid #e9e9e9;
     font-family:'Roboto',sans-serif;
@@ -72,22 +72,24 @@ font-family:'Roboto',sans-serif;
     text-align: center;
     font-size: 13px;
     font-family: 'Roboto',sans-serif;
-    padding: 1.5px;
-    margin-left: 50px;
-    border: 0;
+    padding: 1px;
+    margin-left: auto;
+    display: block;
+    margin-top: 9px;
 }
 
 #hideRegister{
     text-align: center;
     font-size: 13px;
     font-family: 'Roboto',sans-serif;
-    padding: 1.5px;
-    margin-left: 80px;
-    border: 0;
-
+    padding: 1px;
+    margin-left: auto;
+    display: block;
+    margin-top: 9px;
 }
 
 #registerForm{
 	display: none;
+
 }
 
