--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -76,6 +76,7 @@ font-family:'Roboto',sans-serif;
     margin-left: auto;
     display: block;
     margin-top: 9px;
+    cursor: pointer;
 }
 
 #hideRegister{
@@ -86,6 +87,7 @@ font-family:'Roboto',sans-serif;
     margin-left: auto;
     display: block;
     margin-top: 9px;
+    cursor: pointer;
 }
 
 #registerForm{
@@ -93,3 +95,7 @@ font-family:'Roboto',sans-serif;
 
 }
 
+label{
+    margin-bottom: -50px;
+     margin-top: 20px; 
+}
